feat(vpn): make home vpn exposed via external-dns

--- a/cluster/apps/vpn/wstunnel/ingress.yaml
+++ b/cluster/apps/vpn/wstunnel/ingress.yaml
@@ -9,14 +9,15 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
     nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    external-dns/is-public: "true"
+    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
 spec:
   tls:
     - hosts:
-        - "home.${SECRET_DOMAIN}"
+        - "wg.${SECRET_DOMAIN}"
       secretName: wstunnel-tls
   rules:
-    - host: "home.${SECRET_DOMAIN}"
+    - host: "wg.${SECRET_DOMAIN}"
       http:
         paths:
           - pathType: Prefix
