--- a/cluster/apps/default/qbittorent/nfs-media-downloads.yaml
+++ b/cluster/apps/default/qbittorent/nfs-media-downloads.yaml
@@ -12,7 +12,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.200
-    path: /mnt/nfs
+    path: /srv/nfs/downloads
   # Explanation of mount options https://www.thegeekdiary.com/common-nfs-mount-options-in-linux/
   mountOptions:
     - nfsvers=3
