--- a/cluster/apps/default/qbittorent/pvc.yaml
+++ b/cluster/apps/default/qbittorent/pvc.yaml
@@ -10,3 +10,16 @@ spec:
   resources:
     requests:
       storage: 100Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: flood-config-pvc
+  namespace: default
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: longhorn
+  resources:
+    requests:
+      storage: 50Mi
