wip(flood): remove FLOOD_OPTION_RUNDIR env var

--- a/cluster/apps/default/qbittorent/pvc.yaml
+++ b/cluster/apps/default/qbittorent/pvc.yaml
@@ -18,7 +18,7 @@ metadata:
   namespace: default
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: longhorn
   resources:
     requests:
