--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -46,13 +46,13 @@ spec:
         enabled: true
         existingClaim: qb-config-pvc
       flood-config:
-        enabled: false
+        enabled: true
         existingClaim: flood-config-pvc
       downloads:
         enabled: true
         existingClaim: nfs-media-downloads-pvc
       openvpn-config:
-        enabled: false
+        enabled: true
         type: "custom"
         volumeSpec:
           secret:
@@ -82,8 +82,8 @@ spec:
             value: "none"
           - name: FLOOD_OPTION_QBURL
             value: "http://127.0.0.1:8080"
-          - name: FLOOD_OPTION_RUNDIR
-            value: "/config"
+#          - name: FLOOD_OPTION_RUNDIR
+#            value: "/config"
           - name: FLOOD_OPTION_QBUSER
             value: dummy
           - name: FLOOD_OPTION_QBPASS
@@ -91,7 +91,6 @@ spec:
         volumeMounts:
           - name: flood-config
             mountPath: "/config"
-            readOnly: false
           - name: downloads
             mountPath: "/downloads"
             readOnly: true
