--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -33,6 +33,23 @@ spec:
           - secretName: qbittorent-tls
             hosts:
               - "qbit.${SECRET_DOMAIN}"
+      flood:
+        enabled: true
+        ingressClassName: "nginx"
+        annotations:
+          nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
+          nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+        hosts:
+          - host: "flood.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - secretName: flood-tls
+            hosts:
+              - "flood.${SECRET_DOMAIN}"
     settings:
       automaticPortSetup: true
     env:
@@ -82,8 +99,8 @@ spec:
             value: "none"
           - name: FLOOD_OPTION_QBURL
             value: "http://127.0.0.1:8080"
-#          - name: FLOOD_OPTION_RUNDIR
-#            value: "/config"
+          - name: FLOOD_OPTION_RUNDIR
+            value: "/config"
           - name: FLOOD_OPTION_QBUSER
             value: dummy
           - name: FLOOD_OPTION_QBPASS
