--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -15,6 +15,17 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    service:
+      flood:
+        enabled: true
+        primary: false
+        type: ClusterIP
+        ports:
+          http:
+            enabled: true
+            primary: false
+            port: 3000
+            protocol: HTTP
     ingress:
       main:
         enabled: true
