wip(flood): fix service key not being correctly indented

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -57,9 +57,9 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
-            service:
-              name: qbittorrent-flood
-              port: 3000
+                service:
+                  name: qbittorrent
+                  port: 3000
         tls:
           - secretName: flood-tls
             hosts:
