wip(flood): change flood svc targetPort to 3000

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -25,6 +25,7 @@ spec:
             enabled: true
             primary: false
             port: 3000
+            targetPort: 3000
             protocol: HTTP
     ingress:
       main:
