--- a/cluster/apps/default/flood/flood-helm-release.yaml
+++ b/cluster/apps/default/flood/flood-helm-release.yaml
@@ -39,6 +39,7 @@ spec:
           nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
         hosts:
           - host: "flood.${SECRET_DOMAIN}"
             paths:
@@ -53,6 +54,7 @@ spec:
       config:
         enabled: true
         existingClaim: flood-config-pvc
+      # PVC from qbittorrent
       downloads:
         enabled: true
         existingClaim: nfs-media-downloads-pvc
