--- a/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
@@ -24,7 +24,7 @@ spec:
       enabled: true
       host: "longhorn.${SECRET_DOMAIN}"
       tls: true
-      tlsSecret: longhorn-tls
+#      tlsSecret: longhorn-tls
       annotations:
         kubernetes.io/ingress.class: "nginx"
         nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
