--- a/renovate.json5
+++ b/renovate.json5
@@ -24,6 +24,17 @@
       "cluster/base/",
     ],
   },
+  "regexManagers": [
+    {
+      "fileMatch": [
+        "./.+\\.yaml$"
+      ],
+      "matchStrings": [
+        "registryUrl=(?<registryUrl>.*?)\n *chart: (?<depName>.*?)\n *version: (?<currentValue>.*)\n"
+      ],
+      "datasourceTemplate": "helm"
+    }
+  ],
   "packageRules": [
     // Setup datasources
     {
