--- a/cluster/apps/cert-manager/cert-manager/cert-manager-helm-release.yaml
+++ b/cluster/apps/cert-manager/cert-manager/cert-manager-helm-release.yaml
@@ -8,6 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://charts.jetstack.io
       chart: cert-manager
       version: v1.3.1
       sourceRef:
