--- a/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
+++ b/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
@@ -8,6 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://charts.bitnami.com/bitnami
       chart: external-dns
       version: 5.1.1
       sourceRef:
