--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -9,6 +9,7 @@ spec:
   interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://oauth2-proxy.github.io/manifests
       chart: oauth2-proxy
       version: 3.3.2
       sourceRef:
