ci(renovate): add loose verioning strategy for wireguard

--- a/renovate.json5
+++ b/renovate.json5
@@ -156,5 +156,15 @@
         "dep/patch"
       ],
     },
+    // version strategies
+    {
+      "matchDatasources": [
+        "docker"
+      ],
+      "versioning": "loose",
+      "matchPackageNames": [
+        "ghcr.io/linuxserver/wireguard",
+      ],
+    }
   ]
 }
