feat(promtail): add promtail helm chart

--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -19,6 +19,7 @@ spec:
     # https://github.com/grafana/helm-charts/blob/main/charts/loki/values.yaml
     replicas: 1
 
+    # PVC is mounted to /data
     persistence:
       enabled: true
       existingClaim: loki-pvc
