chore(gluetun): change gluetun's container name to gluetun instead of openvpn

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -76,7 +76,7 @@ spec:
         ports:
           - containerPort: 1080
             protocol: TCP
-      - name: openvpn
+      - name: gluetun
         image: qmcgaw/gluetun:v3.20.0
         imagePullPolicy: IfNotPresent
         securityContext:
