--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -132,7 +132,7 @@ spec:
             command:
               - /bin/sh
               - -c
-              - if curl -s https://am.i.mullvad.net/connected | grep -q "You are connected to Mullvad"  ; then exit 0; else exit $?; fi
+              - if wget -q -O - https://am.i.mullvad.net/connected | grep -q "You are connected to Mullvad"  ; then exit 0; else exit $?; fi
           initialDelaySeconds: 30
           timeoutSeconds: 8
           periodSeconds: 120
