--- a/cluster/apps/default/syncthing/syncthing-helm-release.yaml
+++ b/cluster/apps/default/syncthing/syncthing-helm-release.yaml
@@ -26,6 +26,7 @@ spec:
         enabled: true
         ingressClassName: "nginx"
         annotations:
+          nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
           nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
           nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
         hosts:
