fix(syncthing): attach pvc to syncthing pod

--- a/cluster/apps/default/syncthing/syncthing-helm-release.yaml
+++ b/cluster/apps/default/syncthing/syncthing-helm-release.yaml
@@ -40,6 +40,6 @@ spec:
 
     persistence:
       data:
-        enabled: false
+        enabled: true
         existingClaim: syncthing-pvc
         mountPath: /var/syncthing
