--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,4 +99,7 @@ nav:
       - Setting up Raspberry Pi for k3s: 'cluster_setup/setting_up_raspberry_pi.md'
       - Installing k3s: 'cluster_setup/installing_k3s.md'
   - Apps: 'apps/oauth2-proxy.md'
-  - Tips and Tricks: 'tips_and_tricks.md'
+  - Miscellaneous:
+      - Restrict Port Forwarding to only allow Cloudflare IPs using OpenWRT: 'miscellaneous/cloudflare_port_forwarding_openwrt.md'
+      - Tips and Tricks: 'miscellaneous/tips_and_tricks.md'
+
