--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -104,6 +104,8 @@ spec:
             value: "on"
           - name: DOT_PROVIDERS
             value: "google"
+          - name: UNBLOCK
+            value: "am.i.mullvad.net"
           - name: TZ
             value: "Africa/Cairo"
         volumeMounts:
