fix(hyperion): fix incorrect chart name

--- a/cluster/apps/default/hyperion/hyperion-helm-release.yaml
+++ b/cluster/apps/default/hyperion/hyperion-helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: hyperion
+      chart: hyperion-ng
       version: 5.0.1
       sourceRef:
         kind: HelmRepository
