--- a/cluster/apps/default/hyperion/hyperion-helm-release.yaml
+++ b/cluster/apps/default/hyperion/hyperion-helm-release.yaml
@@ -37,6 +37,22 @@ spec:
         tls:
           - hosts:
               - "hyperion.${SECRET_DOMAIN}"
+      protobuf:
+        enabled: true
+        ingressClassName: "nginx"
+        annotations:
+          nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
+        hosts:
+          - host: "hyperion-protobuf.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  name: protobufservice
+                  port: 19445
+        tls:
+          - hosts:
+              - "hyperion-protobuf.${SECRET_DOMAIN}"
 
     persistence:
       config:
