--- a/cluster/apps/default/hyperion/hyperion-helm-release.yaml
+++ b/cluster/apps/default/hyperion/hyperion-helm-release.yaml
@@ -37,13 +37,11 @@ spec:
         tls:
           - hosts:
               - "hyperion.${SECRET_DOMAIN}"
-      protobuf:
+      flatbuffer:
         enabled: true
         ingressClassName: "nginx"
-        annotations:
-          nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
         hosts:
-          - host: "hyperion-protobuf.${SECRET_DOMAIN}"
+          - host: "hyperion-flatbuffer.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
@@ -52,7 +50,7 @@ spec:
                   port: 19445
         tls:
           - hosts:
-              - "hyperion-protobuf.${SECRET_DOMAIN}"
+              - "hyperion-flatbuffer.${SECRET_DOMAIN}"
 
     persistence:
       config:
