chore(hyperion): add port again to ingress

--- a/cluster/apps/default/hyperion/hyperion-helm-release.yaml
+++ b/cluster/apps/default/hyperion/hyperion-helm-release.yaml
@@ -47,6 +47,7 @@ spec:
                 pathType: Prefix
                 service:
                   name: protobufservice
+                  port: 19445
         tls:
           - hosts:
               - "hyperion-flatbuffer.${SECRET_DOMAIN}"
