chore(hyperion): add annotation to hyperion ingress

--- a/cluster/apps/default/hyperion/hyperion-helm-release.yaml
+++ b/cluster/apps/default/hyperion/hyperion-helm-release.yaml
@@ -40,6 +40,8 @@ spec:
       flatbuffer:
         enabled: true
         ingressClassName: "nginx"
+        annotations:
+          nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
         hosts:
           - host: "hyperion-flatbuffer.${SECRET_DOMAIN}"
             paths:
