--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -67,6 +67,16 @@ spec:
         cpu: 500m
       limits:
         memory: 5000Mi
+    # Only schedule on RPI since intel rig has faulty ram that causes integrity issues when downloading torrents
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: beta.kubernetes.io/arch
+                  operator: In
+                  values:
+                    - arm64
     additionalContainers:
       - name: shadowsocks
         image: shadowsocks/shadowsocks-libev:v3.3.5
