fix: fix incorrect plex config pvc

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -50,7 +50,7 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: qb-config-pvc
+        existingClaim: plex-config-pvc
       transcode:
         enabled: true
         type: emptyDir
