--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -30,15 +30,15 @@ spec:
         - 44
         - 109
         - 100
-    #    service:
-    #      main:
-    #        type: LoadBalancer
-    #        loadBalancerIP: 10.0.6.53
-    #        externalTrafficPolicy: Local
-    #        annotations:
-    #          metallb.universe.tf/allow-shared-ip: plex
-    #        port:
-    #          port: 32400
+    service:
+      main:
+        type: LoadBalancer
+        loadBalancerIP: 192.168.1.241
+        externalTrafficPolicy: Local
+#        annotations:
+#          metallb.universe.tf/allow-shared-ip: plex
+        port:
+          port: 32400
     ingress:
       main:
         enabled: true
