--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -35,13 +35,14 @@ spec:
         type: LoadBalancer
         loadBalancerIP: 192.168.1.241
         externalTrafficPolicy: Local
-#        annotations:
-#          metallb.universe.tf/allow-shared-ip: plex
-        port:
-          port: 32400
+    #        annotations:
+    #          metallb.universe.tf/allow-shared-ip: plex
+    #        port:
+    #          port: 32400
     ingress:
       main:
         enabled: true
+        ingressClassName: "nginx"
         annotations:
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
@@ -94,7 +95,7 @@ spec:
         image:
           repository: grafana/promtail
           tag: 2.3.0
-        loki: http://loki.logs.svc.cluster.local:3100/loki/api/v1/push
+        loki: http://loki.monitoring.svc.cluster.local:3100/loki/api/v1/push
         logs:
           - name: promtail/plex
             path: "/config/Library/Application Support/Plex Media Server/Logs/*.log"
