--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -30,11 +30,11 @@ spec:
         - 44
         - 109
         - 100
-    service:
-      main:
-        type: LoadBalancer
-        loadBalancerIP: 192.168.1.241
-        externalTrafficPolicy: Local
+    #    service:
+    #      main:
+    #        type: LoadBalancer
+    #        loadBalancerIP: 192.168.1.241
+    #        externalTrafficPolicy: Local
     #        annotations:
     #          metallb.universe.tf/allow-shared-ip: plex
     #        port:
@@ -68,7 +68,7 @@ spec:
         medium: Memory
       nfs-media-pvc:
         enabled: true
-        existingClaim: nfs-media-downloads-pvc
+        existingClaim: nfs-media-pvc
         readOnly: true
 
     # Only run on worker 1
