--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -81,14 +81,11 @@ spec:
                   operator: In
                   values:
                     - k8-w1
-    #    resources:
-    #      requests:
-    #        gpu.intel.com/i915: 1
-    #        cpu: 1000m
-    #        memory: 1500Mi
-    #      limits:
-    #        gpu.intel.com/i915: 1
-    #        memory: 4900Mi
+    resources:
+      requests:
+        amd.com/gpu: 1
+      limits:
+        amd.com/gpu: 1
     addons:
       promtail:
         enabled: true
