--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -30,13 +30,13 @@ spec:
         - 44
         - 109
         - 100
-    service:
-      main:
-        type: LoadBalancer
-        loadBalancerIP: 192.168.1.241
-        externalTrafficPolicy: Local
-        annotations:
-          metallb.universe.tf/allow-shared-ip: plex
+#    service:
+#      main:
+#        type: LoadBalancer
+#        loadBalancerIP: 192.168.1.241
+#        externalTrafficPolicy: Local
+#        annotations:
+#          metallb.universe.tf/allow-shared-ip: plex
     ingress:
       main:
         enabled: true
