--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -23,7 +23,7 @@ spec:
     env:
       TZ: "Africa/Cairo"
       # See https://www.devwithimagination.com/2019/08/21/plex-docker-and-the-problem-of-always-appearing-as-remote/
-      ADVERTISE_IP: "https://plex.${SECRET_DOMAIN}:443/,http://192.168.1.241:32400/"
+      ADVERTISE_IP: "https://plex.${SECRET_DOMAIN}:443/"
     envFrom:
       - secretRef:
           name: plex-secrets
@@ -32,13 +32,13 @@ spec:
         - 44
         - 109
         - 100
-    service:
-      main:
-        type: LoadBalancer
-        loadBalancerIP: 192.168.1.241
-        externalTrafficPolicy: Local
-        annotations:
-          metallb.universe.tf/allow-shared-ip: plex
+#    service:
+#      main:
+#        type: LoadBalancer
+#        loadBalancerIP: 192.168.1.241
+#        externalTrafficPolicy: Local
+#        annotations:
+#          metallb.universe.tf/allow-shared-ip: plex
     ingress:
       main:
         enabled: true
