--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -23,7 +23,7 @@ spec:
     env:
       TZ: "Africa/Cairo"
       # See https://www.devwithimagination.com/2019/08/21/plex-docker-and-the-problem-of-always-appearing-as-remote/
-      ADVERTISE_IP: "https://plex.${SECRET_DOMAIN}:443/"
+      ADVERTISE_IP: "https://plex.${SECRET_DOMAIN}:443/,http://192.168.1.241:32400/"
     envFrom:
       - secretRef:
           name: plex-secrets
@@ -32,18 +32,19 @@ spec:
         - 44
         - 109
         - 100
-#    service:
-#      main:
-#        type: LoadBalancer
-#        loadBalancerIP: 192.168.1.241
-#        externalTrafficPolicy: Local
-#        annotations:
-#          metallb.universe.tf/allow-shared-ip: plex
+    service:
+      main:
+        type: LoadBalancer
+        # Needed since plex only considers clients as local if they're on the same subnet
+        loadBalancerIP: 192.168.1.241
+        externalTrafficPolicy: Local
+        annotations:
+          metallb.universe.tf/allow-shared-ip: plex
     ingress:
       main:
         enabled: true
-        ingressClassName: "nginx"
         annotations:
+          nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
