fix: replace kubernetes.io/ingress.class: "nginx" with ingressClassName: "nginx"

--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -46,6 +46,7 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: "nginx"
         annotations:
           nginx.ingress.kubernetes.io/backend-protocol: "https"
           external-dns/is-public: "true"
