--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -40,6 +40,7 @@ spec:
 
     ingress:
       enabled: true
+      className: nginx
       path: /oauth2
       hosts: [ "auth.${SECRET_DOMAIN}" ]
       tls:
