--- a/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
@@ -25,9 +25,9 @@ spec:
       enabled: true
       host: "longhorn.${SECRET_DOMAIN}"
       tls: true
-      # tlsSecret: longhorn-tls
+      ingressClassName: "nginx"
+      tlsSecret: longhorn-tls
       annotations:
-        kubernetes.io/ingress.class: "nginx"
         nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
         nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
         nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
