--- a/cluster/apps/vpn/wstunnel/ingress.yaml
+++ b/cluster/apps/vpn/wstunnel/ingress.yaml
@@ -4,7 +4,6 @@ metadata:
   name: wstunnel-ingress
   namespace: vpn
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
@@ -12,10 +11,7 @@ metadata:
     external-dns/is-public: "true"
     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
 spec:
-  tls:
-    - hosts:
-        - "wg.${SECRET_DOMAIN}"
-#      secretName: wstunnel-tls
+  ingressClassName: "nginx"
   rules:
     - host: "wg.${SECRET_DOMAIN}"
       http:
@@ -27,3 +23,7 @@ spec:
                 name: wstunnel-svc
                 port:
                   number: 48513
+  tls:
+    - hosts:
+        - "wg.${SECRET_DOMAIN}"
+  #      secretName: wstunnel-tls
