--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -18,8 +18,8 @@ spec:
       interval: 5m
   values:
     image:
-      repository: plexinc/pms-docker
-      tag: 1.24.4.5081-e362dc1ee
+      repository: ghcr.io/k8s-at-home/plex
+      tag: v1.24.4.5081-e362dc1ee
     env:
       TZ: "Africa/Cairo"
       # See https://www.devwithimagination.com/2019/08/21/plex-docker-and-the-problem-of-always-appearing-as-remote/
