chore: update plex claim

--- a/cluster/apps/default/plex/secret.enc.yaml
+++ b/cluster/apps/default/plex/secret.enc.yaml
@@ -4,32 +4,32 @@ metadata:
     name: plex-secrets
     namespace: default
 stringData:
-    PLEX_CLAIM: ENC[AES256_GCM,data:L5FYYUVFyCbZyOiio0ka2aEAGpGadwC5wkI=,iv:d86pB4w9mSBw+SeqCx5YHIo2uwf7v0FsRfZF5huLh2c=,tag:DEjo5AfEnkdzjkonpWCFxQ==,type:str]
+    PLEX_CLAIM: ENC[AES256_GCM,data:aZU+rMnRdo7GkuRMX2dfEH6VCSKEUPKoWzY=,iv:2vZJI34cuSWcte4ArVuv0juN4eIUDR8FZewlBqHXLRE=,tag:DtYmH1AAZjfoaI/xBqrG3g==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-10-17T22:21:00Z"
-    mac: ENC[AES256_GCM,data:dSkK4CFWsNo6jd6rxGglS/jiRNL5g0+TjRynXmJP9F1k41qUN9jtJhXkeKHFY1zr0wL1DTXllS00YtI5iMJ28J/km0/6HaMfPmwcf9s/scHVUfwxLGwN/wrb8wldnqShhmOgUTXzC7Co55Y+rsBMV1v3wq4KqlDfN1J0I8LBVvE=,iv:KlUHHQn5cOdx2GNRXqkjAwzCtKQLZn/PMx0/uAA+2Zk=,tag:s/T0kK7ha4Sc3fSpjuAG8Q==,type:str]
+    lastmodified: "2021-10-23T15:45:24Z"
+    mac: ENC[AES256_GCM,data:m8DL5jAMsqkVjDyFPbCGs0T+2hGMKyijg8yLCOtN3vxcXzENbvJd8qtCKCYqYUmKCiaUe24/Bi2g3ev1BcltZ4yryrwtrNajC4Z3dcRUP5Nle85YFYY20qvUGCC+PHQFhoHf9CIKplWK1zk/+qjWRc1Zp8KHetJ/3OU2iIH249w=,iv:A3hXsfcO+1wcKx6i89IEf6jKlNWscVSmrxY6lswawio=,tag:PRIpBYGH9tXgPt2QKPZRBQ==,type:str]
     pgp:
-        - created_at: "2021-10-17T22:20:59Z"
+        - created_at: "2021-10-23T15:45:23Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/RF4SGuBzPq7fSHsLz0meXm8fu+185SbrrZOqdxa3ft4Y
-            VwPv0kjYNeEW9z3ruId15CyfFFqjx7eRWN0Ir0iyVYav/ZMdrDc67VWfRp0NijUC
-            6wRRzkmlsMTVDxwhrx5IpQ4yMl86QUndbhPHb++nm8ysbscdcnNkujNRwDsI76dY
-            ZRaZdoH7sflm2hUBhAm3XsUjRiaDZMOqzel/c1QcFfseVj+StsJz0nqd807HinMK
-            AMYh9UTfkOdxSRHb5bos1Zj6IIhxjd+dxA0sJ444LWkjGLwrKRPOz1XlZ7AmhP95
-            p058D78Cxzm/p5JrIkG58I/302oo/NIJ3LjFptveuJT96GIi5eD4IIilykLisD4l
-            sEzMaVxBGYu00JH9VvHsYcO+xTgIoybBmUFAghpTv7X2FUfI9XG6UWbd4xWcwntm
-            PanO61WzB/g5g632J9e2mkBcNyOUyvMq/yP+OsAukLkJEqMumdqSuBHUARorKAFA
-            +Q0muf+tRl9I20XdXtQT0lwBDf9l2zNy+r3vJxYz4WxOYfDxq7rkPzYpsXIGv8eD
-            RjVPMV1SaQ5ZPk+4ICe+ifoN0X5x9RBSCtOlecmyqw5LM+M6fozIMA7gwGM6i0g6
-            HgEwLcdQHDfDSnxsoQ==
-            =bsa1
+            hQGMA71EESEn7N2iAQv8CjLGzsyUJIw1bilOAENH8/o5a2DpKsUb0Z6PlLpLqgFx
+            Y1JnV9h/La/0rmQ6VypKJORUWdZXd86//bd6Yg9X+OhIG8vZGat3I2HQzZFh1rnF
+            YTX9C+5v+LVsdHU/13QEOLPW9Q0Qo2rZpW7k/yFhNbIYDAbgkuhX19qtywpYriq7
+            q3v8ZzQV8/d/H8sgiwz57aeyncW0QtiAi+JZ09ZDlxwZkKSKa3u77yQjBg0u0/dN
+            g0fIx4BbpX+Y6rmP2pcu/CTyhJHYxsqVUy9p9Xnzg+w+pQ4Z4z4gJUnEn/94f0ml
+            FQqTujPWssntEokp7ajMUcMfDHOVTUfdKcR73+ZFl5vKDgkw2nVkuKu3PKeTjWmy
+            MZXCEbDRXZhBQoyC0/g7VdsBGzWWYq/6p5k0iHLwMGxNxd8BtNORu34jCK0xKvF4
+            S11Z5Myx5IVIzmw8jYBTqH3lZsb2OEi3fmX015BPqmqt91lzuXYRWf084bGGYqx5
+            DF0a0BbGFZ0kDuRsSEjL0l4BtEYJGJH53gmPsn1tTza82zqxhVnw0YUKZ3wxqRCq
+            I9qvkMDfuktfd5VlfDnVWG43bk4ZHzPqfgaejL8gdWlQyPkG1GEfu00WtycuRV95
+            FqTgclHdcQ/5qTFe3bIS
+            =QzLG
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
