--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -83,7 +83,7 @@
       ],
       "versioning": "loose",
       "matchPackageNames": [
-        "ghcr.io/k8s-at-home/plex",
+        "plexinc/pms-docker",
       ]
     },
     // Add labels according to package and update types
